--- a/client/src/components/Nav.css
+++ b/client/src/components/Nav.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     padding-left: 20px;
     padding-right: 20px;
-    background-color: rgb(136, 203, 136);
+    background-color: blue;
     height: 100px
 }
 
@@ -15,10 +15,12 @@
 }
 
 .nav-links a{
-    color:rgb(3, 3, 3);
+    color:white;
     text-decoration: none;
     padding: 10px;
     font-weight: 600;
     font-size: 17px;
 }
-
+.head{
+    color: white;
+}
