--- a/example-project/client/src/components/Form.css
+++ b/example-project/client/src/components/Form.css
@@ -14,6 +14,7 @@
     margin: 0;
     padding: 5vw ;
     position:center; 
+    /* padding-left: 200px; */
     /* position:relative for .prevBtn and .nextBtn position:absolute; */
 }
 
@@ -42,6 +43,10 @@
 .form-box textarea{
     height: 15vh;
 }
+.field1{
+margin-left: 25%;
+
+}
 
 
 
@@ -58,7 +63,17 @@
     bottom: 10cm;
     cursor: pointer;
     font-size: 20px;
-    position:center;
+    padding-left: 600px;
+    padding-right: 600px;
+}
 
 
+
+.gyminfo{
+    padding-left: 100;
+    padding-right: 450px;
+  
+}
+.form-step{
+    padding-right: 100px;
 }
